--- a/bike-stats.ipynb
+++ b/bike-stats.ipynb
@@ -1379,6 +1379,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# done"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
